--- a/Boostrapapi.html
+++ b/Boostrapapi.html
@@ -29,5 +29,46 @@
             <p class="text-center mb-4">www.789946@hotmail.com</p>
         </div>
     </div>
+
+    <div class="bg-warning m-5 p-5">
+        <span class="fs-1">รายชื่อบุคลากร</span>
+        <div class="fw-bold mb-3">จำนวนบุคลากรทั้งหมด 20 คน</div>
+        <table class="table table-bordered border-white table-striped">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">E-mail</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Phollakrit</td>
+                    <td>Wongsatisuk</td>
+                    <td>Phollakrit@gmail.com</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Yod-anan</td>
+                    <td>Pitchayanonthapat</td>
+                    <td>GGWP@gmail.com</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Unchittha</td>
+                    <td>Phetcharat</td>
+                    <td>EZNOOB@gmail.com</td>
+                </tr>
+            </tbody>
+            <tfoot class="table-group-divider">
+                <tr>
+                    <th colspan="3" class="text-end fw-bold fs-3">รวมคนมีอีเมลทั้งสิ้น</th>
+                    <td class="fw-bold fs-3">3</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
