--- a/work_bootstrap2.html
+++ b/work_bootstrap2.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="col-lg-12 p-5">
                       <div class="table-respontive">
-                        <table class="table">
+                        <table class="table table-bordered">
                           <thead class="table-secondary">
                             <tr class="table-group-divider">
                               <th>#</th>
